feat: refactor delete time